2019-05-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* util/htmlxref.cnf: Add eww. From Tsuyoshi Kitamoto 
	<tsuyoshi.kitamoto@gmail.com>.

2019-05-06  Gavin Smith  <gavinsmith0123@gmail.com>

	Fix finding translation files in out-of-source build.

	* tp/Texinfo/ModulePath.pm.in ($builddir, $srcdir):
	Save builddir instead of srcdir.
	* tp/Texinfo/XSLoader.pm: Pass on $Texinfo::ModulePath::builddir
	to XS modules.
	* tp/Texinfo/XS/parsetexi/api.c (init),
	* tp/texi2any.pl: When looking for the directory containing the
	translation files, check in $Texinfo::ModulePath::builddir and
	nowhere else.

2019-05-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/tests/t/stdout.sh,
	* tp/tests/t/stdout_split.sh: Remove tests.

2019-05-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/tests/Makefile.am (copy-tests): Do not try to make target 
	in subdirectory.

2019-05-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/94htmlxref.t: Remove a ".texi" suffix given as the manual 
	argument to an xref command.

2019-05-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/30sectioning.t: Remove a ".texi" suffix given as the 
	manual argument to an xref command.

2019-05-05  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/HTML.pm (_external_node_href): Do not strip
	off an arbitrary extension from the name of an external manual - 
	only strip of ".info".  Ludovico Courtès reported that 
	extensions were being used to distinguish translations of 
	manuals into other languages.

2019-04-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/XS/Makefile.am
	(XSParagraph_la_LDFLAGS, Parsetexi_la_LDFLAGS):
	Put $(LTLIBINTL) and $(LTLIBICONV) in here.  Remove $(TERMLIBS) 
	which was not used.

	Attempt to fix building under Cygwin, which Hans-Bernhard Bröker 
	reported was broken.

2019-04-28  Gavin Smith  <gavinsmith0123@gmail.com>

	Set TEXI2DVI in Makefile.

	* doc/Makefile.am: Set TEXI2DVI to use the texi2dvi in the 